RESOLVED FIXED259167
[UI-side compositing] Cannot grab the scrubber to scroll to the end of a long page (build log)
https://bugs.webkit.org/show_bug.cgi?id=259167
Summary [UI-side compositing] Cannot grab the scrubber to scroll to the end of a long...
Nikos Mouchtaris
Reported 2023-07-12 17:41:02 PDT
[UI-side compositing] Cannot grab the scrubber to scroll to the end of a long page (build log)
Attachments
Nikos Mouchtaris
Comment 1 2023-07-12 17:41:33 PDT
Nikos Mouchtaris
Comment 2 2023-07-12 17:50:53 PDT
EWS
Comment 3 2023-07-17 22:19:49 PDT
Committed 266124@main (0f2ddd2e3227): <https://commits.webkit.org/266124@main> Reviewed commits have been landed. Closing PR #15802 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.