Cherry-pick 0f2ddd2e3227. rdar://problem/112154989

[UI-side compositing] Cannot grab the scrubber to scroll to the end of a long page (build log)
    https://bugs.webkit.org/show_bug.cgi?id=259167
    rdar://112154989

    Reviewed by Simon Fraser.

    After https://commits.webkit.org/265731@main removed NSScrollerImps in the web process, when
    ScrollbarThemeMac::minimumThumbLength would query the scrollbar map, it wouldn't be able to
    find the NSScrollerImp, so it would return 0. This resulted in users not being able to drag
    the scrollbar. To resolve this, plumb the knobMinLength property to the web process, where it
    is tracked by RemoteScrollbarsController.

    * Source/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp:
    (WebCore::AsyncScrollingCoordinator::requestScrollToPosition):
    (WebCore::AsyncScrollingCoordinator::scrollingTreeNodeScrollbarMinimumThumbLengthDidChange):
    * Source/WebCore/page/scrolling/AsyncScrollingCoordinator.h:
    * Source/WebCore/page/scrolling/ScrollingTree.h:
    (WebCore::ScrollingTree::scrollingTreeNodeScrollbarMinimumThumbLengthDidChange):
    * Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.cpp:
    (WebCore::ScrollingTreeScrollingNode::scrollbarMinimumThumbLengthDidChange):
    * Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h:
    * Source/WebCore/page/scrolling/mac/ScrollerMac.mm:
    (WebCore::ScrollerMac::attach):
    (WebCore::ScrollerMac::updateScrollbarStyle):
    * Source/WebCore/platform/Scrollbar.cpp:
    (WebCore::Scrollbar::minimumThumbLength const):
    * Source/WebCore/platform/Scrollbar.h:
    * Source/WebCore/platform/ScrollbarsController.h:
    (WebCore::ScrollbarsController::setScrollbarMinimumThumbLength):
    (WebCore::ScrollbarsController::minimumThumbLength):
    * Source/WebCore/platform/mac/ScrollbarThemeMac.mm:
    (WebCore::ScrollbarThemeMac::hasThumb):
    (WebCore::ScrollbarThemeMac::minimumThumbLength):
    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
    (WebKit::RemoteScrollingCoordinatorProxy::scrollingTreeNodeScrollbarMinimumThumbLengthDidChange):
    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.h:
    * Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingTreeMac.h:
    * Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingTreeMac.mm:
    (WebKit::RemoteScrollingTreeMac::scrollingTreeNodeScrollbarMinimumThumbLengthDidChange):
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollbarsController.h:
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollbarsController.mm:
    (WebKit::RemoteScrollbarsController::setScrollbarMinimumThumbLength):
    (WebKit::RemoteScrollbarsController::minimumThumbLength):
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.h:
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.messages.in:
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.mm:
    (WebKit::RemoteScrollingCoordinator::scrollingTreeNodeScrollbarMinimumThumbLengthDidChange):

    Canonical link: https://commits.webkit.org/266124@main

Identifier: 265870.194@safari-7616-branch